WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300258
Crash in AVVideoCaptureSource::takePhotoInternal(...): uncaught exception from -[AVCapturePhotoOutput setMaxPhotoDimensions:]
https://bugs.webkit.org/show_bug.cgi?id=300258
Summary
Crash in AVVideoCaptureSource::takePhotoInternal(...): uncaught exception fro...
Jer Noble
Reported
2025-10-06 13:54:16 PDT
Crash in AVVideoCaptureSource::takePhotoInternal(...): uncaught exception from -[AVCapturePhotoOutput setMaxPhotoDimensions:]
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-10-06 13:54:17 PDT
<
rdar://problem/146009436
>
Jer Noble
Comment 2
2025-10-06 14:00:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51891
EWS
Comment 3
2025-10-24 15:06:42 PDT
Committed
302115@main
(3ce65ddbeb46): <
https://commits.webkit.org/302115@main
> Reviewed commits have been landed. Closing PR #51891 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug